@startuml
'https://plantuml.com/class-diagram


package Commands {
  class CreateClientCommand {
    execute() : string;
  }

  class ChangePhoneCommand {
    execute(): void;
  }
}

package Queries {
  class GetClientQuery {
    execute(clientId: string)
  }
}

package Repositories {
  class ClientRepository {
    addEvent(clientId: string, event: ClientEvent};
    get(): ClientEvent[]
  }
}

CreateClientCommand --> ClientRepository
ChangePhoneCommand --> ClientRepository
GetClientQuery --> ClientRepository

@enduml
